# Agent-Trust-Kernel-

./: .env.example  .gitignore  LICENSE  README.md  agentguard.yaml  atk-policy.json  atk.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.json  wrangler.toml
agentguard/: __init__.py  adapters.py  benchmark.py  chaos.py  cli.py  core.py  dashboard.py  plugins.py
atk/: __init__.py  adapters.py  chaos.py  core.py  plugins.py
database/: schema_v10_planetary.sql  schema_v11_planetary.sql  schema_v12_microkernel.sql  schema_v12_production.sql  schema_v12_time_machine.sql  schema_v3.sql  schema_v4_patch.sql  schema_v6_enterprise.sql  schema_v7_enterprise.sql  schema_v8_planetary.sql  schema_v9_lifecycle.sql
docs/: RUNBOOK_AND_OPERATIONS.md  SYSTEM_OVERVIEW.md  TECHNICAL_SPECIFICATION.md  threat-model.md  v1_spec_audit.py
gateway/: package-lock.json  package.json  tsconfig.json  wrangler.toml
gateway/src/: index.ts  index_v10.ts  index_v11.ts  index_v12.ts  types.ts
gateway/src/crypto/: csf.ts
gateway/src/policy/: compiler.ts
gateway/src/redis/: budget.ts  client.ts
gateway/src/rings/: budget-policy.ts  derive.ts  headers.ts  nonce.ts  output-guard.ts  signature.ts
gateway/src/supabase/: ledger.ts
gateway/src/v4/: lease.ts
gateway/tests/: budget.test.ts  csf.test.ts  output-guard.test.ts  rings.test.ts
scripts/: evaluate_compliance.py  seed_agent.py  seed_policy.py
sdk/: README.md  __init__.py  pyproject.toml  safe_runtime_v10.py  safe_runtime_v11.py  safe_runtime_v12.py  safe_runtime_v3.py  safe_runtime_v4.py  safe_runtime_v6.py  safe_runtime_v7.py  safe_runtime_v8.py  test_swarm_mesh.py  verify_system.py  verify_system_v4.py
sdk/sel_v3/: __init__.py  client.py  context.py  crypto.py  csf.py  decorator.py
sdk/sel_v3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/tests/: test_csf.py  test_fail_closed.py  test_vectors.json
src/: index.ts  index_v6.ts  index_v7.ts  index_v8.ts  types.ts
src/crypto/: csf.ts
src/policy/: compiler.ts
src/redis/: budget.ts  client.ts
src/rings/: budget-policy.ts  derive.ts  headers.ts  nonce.ts  output-guard.ts  signature.ts
src/supabase/: ledger.ts
src/v4/: lease.ts
tests/: budget.test.ts  csf.test.ts  output-guard.test.ts  rings.test.ts  test_agentguard.py  test_atk.py
