[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atk"
version = "1.0.0"
description = "The open-source local-first security and governance runtime wrapper for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "cryptography>=42.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["atk*"]
